# space-menace

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: map.tmx
assets/prefabs/: background.ron  bg_structures_tile.ron  bg_tile.ron  bullet.ron  bullet_impact.ron  bullet_impact_new.ron  flier.ron  marine.ron  marine_old.ron  pincer.ron  platform.ron  small_explosion.ron  truss.ron
assets/tilemaps/: background.tsx  foreground.tsx  map.json  map.tmx  map_old.json
assets/ui/: player.ron
resources/: bindings_config.ron  display_config.ron
src/: animation.rs  camera_motion_system.rs  client_main.rs  components.rs  control.rs  graph_creator.rs  main.rs  physics.rs  physics_bundle.rs  server_main.rs  states.rs
src/components/: animation.rs  bounding_box.rs  bullet.rs  collider.rs  collision.rs  coordinates.rs  direction.rs  explosion.rs  flier.rs  marine.rs  mod.rs  motion.rs  orientation.rs  parallax.rs  pincer.rs  subject.rs  subject_tag.rs  two_dim.rs
src/components_new/: mod.rs  subject_marker_component.rs
src/entities/: background.rs  background_entity.rs  bullet.rs  camera.rs  camera_subject.rs  camera_subject_entity.rs  collider.rs  explosion.rs  flier.rs  map.rs  marine.rs  marine_entity.rs  mod.rs  pincer.rs  platform.rs  truss.rs  truss_entity.rs
src/resources/: asset.rs  assets.rs  bullet.rs  context.rs  map.rs  mod.rs  sprite.rs
src/states/: load.rs  mod.rs
src/systems/: acceleration.rs  animation.rs  attack.rs  camera_motion.rs  collision.rs  collision_new.rs  death.rs  direction.rs  flier.rs  input.rs  kinematics.rs  mod.rs  motion.rs  (+5 more)
(+3 files in other folders)
