[package]
name = "space-menace"
version = "0.1.0"
authors = ["Kumar Ankur <kmrankur@outlook.com>"]
edition = "2018"

[dependencies]
serde = "*"
log = "*"
specs-derive = "*"

[dependencies.amethyst]
version = "0.15.0"
default-features = false
features = ["json", "animation"]

[features]
default = ["metal"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

