[package]
name = "space-menace"
version = "0.1.0"
authors = ["Kumar Ankur <kmrankur@outlook.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
log = "0.4"
specs-derive = "0.4"

[dependencies.amethyst]
version = "0.15.3"
default-features = false
features = ["json", "animation"]

[features]
default = ["metal"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

